<resources>
    <string name="app_name">Rx Care</string>
    <string name="logo">logo</string>
    <string name="www_rxcare_com">www.rxcare.com</string>
    <string name="doctor">DOCTOR</string>
    <string name="patient">Patient</string>
    <string name="title_activity_patient_login">PatientLogin</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tracker_fragment">Tracker fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="home_fragment">Home fragment</string>
    <string name="chat_fragment">Chat fragment</string>
    <string name="appointment_fragment">Appointment fragment</string>

</resources>