<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Account">


    <ImageView
        android:id="@+id/RxLogo"
        android:layout_width="199dp"
        android:layout_height="191dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />


    <androidx.cardview.widget.CardView
        android:id="@+id/doctorcard"
        android:layout_width="191dp"
        android:layout_height="190dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="68dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RxLogo"
        tools:ignore="DuplicateSpeakableTextCheck">


        <ImageView
            android:id="@+id/doctorimage"
            android:layout_width="174dp"
            android:layout_height="159dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/doctor"
            android:src="@drawable/doctor" />

        <Button
            android:id="@+id/Doctor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#031A5C"
            android:text="@string/doctor"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="191dp"
        android:layout_height="190dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="10dp"
        app:cardElevation="15dp"
        app:cardCornerRadius="15dp"
        android:clickable="true"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toEndOf="@id/doctorcard"
        app:layout_constraintTop_toBottomOf="@id/RxLogo"
        android:focusable="true">


        <ImageView
            android:id="@+id/Patientimage"
            android:layout_width="174dp"
            android:layout_height="159dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/patient"
            android:src="@drawable/patient" />

        <Button
            android:id="@+id/Patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#031A5C"
            android:text="@string/patient"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/rxsite"
        android:layout_width="139dp"
        android:layout_height="19dp"
        android:layout_below="@id/RxLogo"
        android:layout_centerInParent="true"
        android:layout_marginBottom="72dp"
        android:gravity="center"
        android:text="@string/www_rxcare_com"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RxLogo"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>