<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PatientRegister">


    <LinearLayout
        android:id="@+id/patientlayout"
        android:layout_width="412dp"
        android:layout_height="308dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="#17144d"
        android:autofillHints="Gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Patientimage"
            android:layout_width="161dp"
            android:layout_height="148dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/doctor"
            android:src="@drawable/patient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.081" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="40dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/sign_up_to_continue"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="normal" />
    </LinearLayout>

    <EditText
        android:id="@+id/EnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="15dp"
        android:autofillHints="Email"
        android:hint="enter email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/patientlayout" />

    <EditText
        android:id="@+id/EnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Password"
        android:hint="password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/EnterEmail"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:autofillHints="Phone Number"
        android:hint="phone number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintTop_toBottomOf="@+id/EnterPassword"
        tools:layout_editor_absoluteX="0dp" />



    <androidx.cardview.widget.CardView
        android:id="@+id/Gendercard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="#17144d"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/PhoneNumber">


        <TextView
            android:id="@+id/Gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="Gender"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="viewStart"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="92dp"
                android:layout_marginTop="10dp"
                android:text="Male"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="92dp"
                android:textColor="@color/white"
                android:text="Female"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/SignUp"
        android:layout_width="355dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/teal_200"
        android:text="Sign up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Gendercard"
        app:layout_constraintVertical_bias="0.009"/>

</androidx.constraintlayout.widget.ConstraintLayout>